--- a/CarRentingSystem/CarRentingSystem/Views/Cars/All.cshtml
+++ b/CarRentingSystem/CarRentingSystem/Views/Cars/All.cshtml
@@ -1,7 +1,11 @@
 ﻿@model AllCarsQueryModel
 
+@{
+    ViewData["Title"] = "All Cars";
+}
+
 <form method="get">
-    <div class="row mb-5">
+    <div class="row">
         <div class="form-group col-md-4">
             <div class="form-group">
                 <label asp-for="Brand"></label>
@@ -32,6 +36,38 @@
         </div>
     </div>
 </form>
+
+@{
+    var previousPage = Model.CurrentPage - 1;
+    if (previousPage < 1)
+    {
+        previousPage = 1;
+    }
+
+    var maxPage = Math.Ceiling((double)Model.TotalCars / AllCarsQueryModel.CarsPerPage);
+}
+
+<div class="row mb-5">
+    <div class="col-md-6">
+        <a class="btn btn-primary @(Model.CurrentPage == 1 ? "disabled" : string.Empty)"
+           asp-controller="Cars"
+           asp-action="All"
+           asp-route-currentPage="@previousPage"
+           asp-route-brand="@Model.Brand"
+           asp-route-searchTerm="@Model.SearchTerm"
+           asp-route-sorting="@((int)Model.Sorting)"><<</a>
+    </div>
+    <div class="col-md-6">
+        <a class="btn btn-primary @(Model.CurrentPage == maxPage ? "disabled" : string.Empty)"
+           style="float: right;"
+           asp-controller="Cars"
+           asp-action="All"
+           asp-route-currentPage="@(Model.CurrentPage + 1)"
+           asp-route-brand="@Model.Brand"
+           asp-route-searchTerm="@Model.SearchTerm"
+           asp-route-sorting="@((int)Model.Sorting)">>></a>
+    </div>
+</div>
 
 <div class="row">
     @foreach (var car in Model.Cars)
