--- a/CarRentingSystem/CarRentingSystem/Views/Home/Index.cshtml
+++ b/CarRentingSystem/CarRentingSystem/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IndexViewModel
 
 @{
-    ViewData["Title"] = "Welcome!";
+    ViewBag.Title = "Welcome!";
 }
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
