Introduced service layer

--- a/CarRentingSystem/CarRentingSystem/Views/Home/Index.cshtml
+++ b/CarRentingSystem/CarRentingSystem/Views/Home/Index.cshtml
@@ -31,10 +31,12 @@
             <div class="carousel-item @(i == 0 ? "active" : string.Empty)">
                 <img class="d-block w-100" src="@car.ImageUrl" alt="@car.Brand @car.Model">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5><a class="btn btn-primary" 
-                        asp-controller="Cars" 
-                        asp-action="Details" 
-                        asp-route-id="@car.Id">@car.Year  @car.Brand @car.Model</a></h5>
+                    <h5>
+                        <a class="btn btn-primary"
+                       asp-controller="Cars"
+                       asp-action="Details"
+                       asp-route-id="@car.Id">@car.Year  @car.Brand @car.Model</a>
+                    </h5>
                 </div>
             </div>
         }
@@ -49,18 +51,33 @@
     </a>
 </div>
 
+
 <div class="mb-5"></div>
 
-<div class="jumbotron">
-    <div class="row">
-        <h2 class="col-md-4 text-center">
-            @Model.TotalCars Cars
-        </h2>
-        <h2 class="col-md-4 text-center">
-            @Model.TotalUsers Users
-        </h2>
-        <h2 class="col-md-4 text-center">
-            @Model.TotalRents Rents
-        </h2>
+<div class="row">
+    <div class="col-12 text-center">
+        <button class="btn btn-primary" id="statistics-button">Show Statistics</button>
     </div>
 </div>
+
+<div class="jumbotron d-none" id="statistics">
+    <div class="row">
+        <h2 class="col-md-4 text-center" id="total-cars"></h2>
+        <h2 class="col-md-4 text-center" id="total-users"></h2>
+        <h2 class="col-md-4 text-center" id="total-rents"></h2>
+    </div>
+</div>
+
+@section Scripts {
+    <script>
+        $('#statistics-button').on('click', ev => {
+            $.get('/api/statistics', (data) => {
+                $('#total-cars').text(data.totalCars + " Cars");
+                $('#total-users').text(data.totalUsers + " Users");
+                $('#total-rents').text(data.totalRents + " Rents");
+                $('#statistics').removeClass('d-none');
+                $('#statistics-button').hide();
+            });
+        });
+    </script>
+}
