--- a/CarRentingSystem/CarRentingSystem/Views/_ViewImports.cshtml
+++ b/CarRentingSystem/CarRentingSystem/Views/_ViewImports.cshtml
@@ -1,6 +1,9 @@
 ﻿@using CarRentingSystem
+@using CarRentingSystem.Infratructure
 @using CarRentingSystem.Models
 @using CarRentingSystem.Models.Home
 @using CarRentingSystem.Models.Cars
 @using CarRentingSystem.Models.Dealers
+@using CarRentingSystem.Services.Cars
+@using CarRentingSystem.Services.Dealers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
