Added memory cache for latestCars in HomeController

--- a/CarRentingSystem/CarRentingSystem/Views/Home/Index.cshtml
+++ b/CarRentingSystem/CarRentingSystem/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IndexViewModel
+﻿@model List<LatestCarServiceModel>
 
 @{
     ViewBag.Title = "Welcome!";
@@ -8,7 +8,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
 
-@if (!Model.Cars.Any())
+@if (!Model.Any())
 {
     <div class="jumbotron">
         <h1 class="display-4">Welcome to the best place for renting cars!</h1>
@@ -24,18 +24,18 @@
 
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
-        @for (int i = 0; i < Model.Cars.Count; i++)
+        @for (int i = 0; i < Model.Count; i++)
         {
-            var car = Model.Cars[i];
+            var car = Model[i];
 
             <div class="carousel-item @(i == 0 ? "active" : string.Empty)">
                 <img class="d-block w-100" src="@car.ImageUrl" alt="@car.Brand @car.Model">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>
                         <a class="btn btn-primary"
-                       asp-controller="Cars"
-                       asp-action="Details"
-                       asp-route-id="@car.Id">@car.Year  @car.Brand @car.Model</a>
+                           asp-controller="Cars"
+                           asp-action="Details"
+                           asp-route-id="@car.Id">@car.Year  @car.Brand @car.Model</a>
                     </h5>
                 </div>
             </div>
