--- a/CarRentingSystem/CarRentingSystem/Views/Home/Index.cshtml
+++ b/CarRentingSystem/CarRentingSystem/Views/Home/Index.cshtml
@@ -40,7 +40,7 @@
                            asp-controller="Cars"
                            asp-action="Details"
                            asp-route-id="@car.Id"
-                           asp-route-information="@(car.Brand + " " + @car.Model)">
+                           asp-route-information="@car.GetInformation()">
                             @car.Year @car.Brand @car.Model
                         </a>
                     </h5>
