--- a/CarRentingSystem/CarRentingSystem/Views/Shared/_Layout.cshtml
+++ b/CarRentingSystem/CarRentingSystem/Views/Shared/_Layout.cshtml
@@ -22,11 +22,21 @@
                         @if (!User.IsAdmin())
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Cars" asp-action="Add">Add Car</a>
+                                <a class="nav-link text-dark"
+                                   asp-area=""
+                                   asp-controller="Cars"
+                                   asp-action="Add">
+                                    Add Car
+                                </a>
                             </li>
                         }
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cars" asp-action="All">All Cars</a>
+                            <a class="nav-link text-dark"
+                               asp-area=""
+                               asp-controller="Cars"
+                               asp-action="All">
+                                All Cars
+                            </a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
