--- a/CarRentingSystem/CarRentingSystem/Areas/Admin/Views/Cars/All.cshtml
+++ b/CarRentingSystem/CarRentingSystem/Areas/Admin/Views/Cars/All.cshtml
@@ -1,11 +1,10 @@
 ﻿@model IEnumerable<CarServiceModel>
 
 @{
-    ViewBag.Title = "Become Dealer";
+    ViewBag.Title = "Cars Administration";
 }
 
 <h1>All Cars</h1>
-
 
 <table class="table table-striped">
     <thead class="thead-dark">
