Added new migration

--- a/CarRentingSystem/CarRentingSystem/Views/Home/Index.cshtml
+++ b/CarRentingSystem/CarRentingSystem/Views/Home/Index.cshtml
@@ -59,19 +59,19 @@
 </div>
 
 
-<div class="mb-5"></div>
-
-<div class="row">
-    <div class="col-12 text-center">
-        <button class="btn btn-primary" id="statistics-button">Show Statistics</button>
-    </div>
-</div>
-
-<div class="jumbotron d-none" id="statistics">
+<div class="mb-5">
     <div class="row">
-        <h2 class="col-md-4 text-center" id="total-cars"></h2>
-        <h2 class="col-md-4 text-center" id="total-users"></h2>
-        <h2 class="col-md-4 text-center" id="total-rents"></h2>
+        <div class="col-12 text-center">
+            <button class="btn btn-primary" id="statistics-button">Show Statistics</button>
+        </div>
+    </div>
+
+    <div class="jumbotron d-none" id="statistics">
+        <div class="row">
+            <h2 class="col-md-4 text-center" id="total-cars"></h2>
+            <h2 class="col-md-4 text-center" id="total-users"></h2>
+            <h2 class="col-md-4 text-center" id="total-rents"></h2>
+        </div>
     </div>
 </div>
 
